@@ -29,9 +29,9 @@ typedef struct {
 	gchar *text;
 } Hello;
 
-void hello_model_init (Hello * hello, BonoboEmbeddable * bonobo_object);
-void hello_model_set_text (Hello * hello, gchar * text);
-void hello_model_clear (Hello * hello);
-void hello_model_destroy (Hello * obj);
+void hello_model_init     (Hello *hello, BonoboEmbeddable *bonobo_object);
+void hello_model_set_text (Hello *hello, gchar            *text);
+void hello_model_clear    (Hello *hello);
+void hello_model_destroy  (Hello *obj);
 
 #endif
